--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -1,5 +1,5 @@
 .markdown {
-  @apply text-lg leading-relaxed;
+  @apply  leading-relaxed;
 }
 
 .markdown p,
@@ -10,23 +10,23 @@
 }
 
 .markdown h1 {
-  @apply mb-4 text-3xl font-bold text-cyan md:text-6xl;
+  @apply mb-4 font-bold text-blue-400;
 }
 
 .markdown h2 {
-  @apply mt-12 mb-4 text-3xl font-semibold leading-snug text-white;
+  @apply mt-12 mb-4 font-semibold leading-snug text-white;
 }
 
 .markdown h3 {
-  @apply mt-8 mb-4 text-2xl font-semibold leading-snug text-red-100;
+  @apply mt-8 mb-4 font-semibold leading-snug text-red-100;
 }
 
 .markdown code {
-  @apply px-2 py-1 text-yellow-200 bg-gray-900 rounded;
+  @apply px-2 py-1 text-red-300 rounded bg-codeBlock;
 }
 
 .markdown p {
-  @apply text-xl font-light text-gray-300;
+  @apply  font-light text-gray-300;
 }
 
 .markdown inline-link {
